--- a/src/ui/main_window.glade
+++ b/src/ui/main_window.glade
@@ -27,11 +27,13 @@
           <object class="GtkEntry" id="id@gtk_entry">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
-            <property name="has_default">True</property>
             <property name="max_length">255</property>
+            <property name="invisible_char">s</property>
             <property name="activates_default">True</property>
-            <property name="shadow_type">etched-out</property>
-            <signal name="activate" handler="on_enter" swapped="no"/>
+            <property name="shadow_type">out</property>
+            <property name="progress_pulse_step">0</property>
+            <property name="placeholder_text" translatable="yes">input example</property>
+            <signal name="activate" handler="on_press_enter" swapped="no"/>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -66,7 +68,7 @@
                     <property name="hexpand">True</property>
                     <property name="vexpand">True</property>
                     <property name="border_width">1</property>
-                    <signal name="clicked" handler="on_botton_LOG_clicked" object="id@gtk_io_view" swapped="no"/>
+                    <signal name="clicked" handler="on_botton_LOG_clicked" object="id@gtk_entry" swapped="no"/>
                   </object>
                   <packing>
                     <property name="left_attach">0</property>
@@ -83,7 +85,7 @@
                     <property name="hexpand">True</property>
                     <property name="vexpand">True</property>
                     <property name="border_width">1</property>
-                    <signal name="clicked" handler="on_botton_LN_clicked" object="id@gtk_io_view" swapped="no"/>
+                    <signal name="clicked" handler="on_botton_LN_clicked" object="id@gtk_entry" swapped="no"/>
                   </object>
                   <packing>
                     <property name="left_attach">1</property>
