bgreydon/fix bugs

--- a/src/ui/main_window.ui
+++ b/src/ui/main_window.ui
@@ -78,14 +78,41 @@
           </packing>
         </child>
         <child>
-          <object class="GtkEntry" id="id@gtk_entry">
+          <object class="GtkBox">
             <property name="visible">True</property>
-            <property name="can-focus">True</property>
-            <property name="max-length">255</property>
-            <property name="activates-default">True</property>
-            <property name="progress-pulse-step">0</property>
-            <property name="placeholder-text" translatable="yes">input example</property>
-            <signal name="activate" handler="on_press_enter" swapped="no"/>
+            <property name="can-focus">False</property>
+            <property name="spacing">5</property>
+            <child>
+              <object class="GtkEntry" id="id@gtk_entry_expression">
+                <property name="name">id@gtk_entry_expression</property>
+                <property name="visible">True</property>
+                <property name="can-focus">True</property>
+                <property name="max-length">255</property>
+                <property name="activates-default">True</property>
+                <property name="progress-pulse-step">0</property>
+                <property name="placeholder-text" translatable="yes">input example</property>
+                <signal name="activate" handler="on_press_enter" object="id@gtk_entry_x" swapped="no"/>
+              </object>
+              <packing>
+                <property name="expand">True</property>
+                <property name="fill">True</property>
+                <property name="position">0</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkEntry" id="id@gtk_entry_x">
+                <property name="name">id@gtk_entry_x</property>
+                <property name="visible">True</property>
+                <property name="can-focus">True</property>
+                <property name="max-length">64</property>
+                <property name="placeholder-text" translatable="yes">x value</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">1</property>
+              </packing>
+            </child>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -123,7 +150,7 @@
                     <property name="hexpand">True</property>
                     <property name="vexpand">True</property>
                     <property name="border-width">1</property>
-                    <signal name="clicked" handler="on_botton_LOG_clicked" object="id@gtk_entry" swapped="no"/>
+                    <signal name="clicked" handler="on_botton_LOG_clicked" object="id@gtk_entry_expression" swapped="no"/>
                   </object>
                   <packing>
                     <property name="left-attach">0</property>
@@ -139,7 +166,7 @@
                     <property name="hexpand">True</property>
                     <property name="vexpand">True</property>
                     <property name="border-width">1</property>
-                    <signal name="clicked" handler="on_botton_LN_clicked" object="id@gtk_entry" swapped="no"/>
+                    <signal name="clicked" handler="on_botton_LN_clicked" object="id@gtk_entry_expression" swapped="no"/>
                   </object>
                   <packing>
                     <property name="left-attach">1</property>
@@ -155,7 +182,7 @@
                     <property name="hexpand">True</property>
                     <property name="vexpand">True</property>
                     <property name="border-width">1</property>
-                    <signal name="clicked" handler="on_botton_TAN_clicked" object="id@gtk_entry" swapped="no"/>
+                    <signal name="clicked" handler="on_botton_TAN_clicked" object="id@gtk_entry_expression" swapped="no"/>
                   </object>
                   <packing>
                     <property name="left-attach">0</property>
@@ -171,7 +198,7 @@
                     <property name="hexpand">True</property>
                     <property name="vexpand">True</property>
                     <property name="border-width">1</property>
-                    <signal name="clicked" handler="on_botton_ATAN_clicked" object="id@gtk_entry" swapped="no"/>
+                    <signal name="clicked" handler="on_botton_ATAN_clicked" object="id@gtk_entry_expression" swapped="no"/>
                   </object>
                   <packing>
                     <property name="left-attach">1</property>
@@ -204,7 +231,7 @@
                     <property name="hexpand">True</property>
                     <property name="vexpand">True</property>
                     <property name="border-width">1</property>
-                    <signal name="clicked" handler="on_botton_SIN_clicked" object="id@gtk_entry" swapped="no"/>
+                    <signal name="clicked" handler="on_botton_SIN_clicked" object="id@gtk_entry_expression" swapped="no"/>
                   </object>
                   <packing>
                     <property name="left-attach">0</property>
@@ -220,7 +247,7 @@
                     <property name="hexpand">True</property>
                     <property name="vexpand">True</property>
                     <property name="border-width">1</property>
-                    <signal name="clicked" handler="on_botton_COS_clicked" object="id@gtk_entry" swapped="no"/>
+                    <signal name="clicked" handler="on_botton_COS_clicked" object="id@gtk_entry_expression" swapped="no"/>
                   </object>
                   <packing>
                     <property name="left-attach">0</property>
@@ -236,7 +263,7 @@
                     <property name="hexpand">True</property>
                     <property name="vexpand">True</property>
                     <property name="border-width">1</property>
-                    <signal name="clicked" handler="on_botton_ASIN_clicked" object="id@gtk_entry" swapped="no"/>
+                    <signal name="clicked" handler="on_botton_ASIN_clicked" object="id@gtk_entry_expression" swapped="no"/>
                   </object>
                   <packing>
                     <property name="left-attach">1</property>
@@ -252,7 +279,7 @@
                     <property name="hexpand">True</property>
                     <property name="vexpand">True</property>
                     <property name="border-width">1</property>
-                    <signal name="clicked" handler="on_botton_ACOS_clicked" object="id@gtk_entry" swapped="no"/>
+                    <signal name="clicked" handler="on_botton_ACOS_clicked" object="id@gtk_entry_expression" swapped="no"/>
                   </object>
                   <packing>
                     <property name="left-attach">1</property>
@@ -285,7 +312,7 @@
                     <property name="hexpand">True</property>
                     <property name="vexpand">True</property>
                     <property name="border-width">1</property>
-                    <signal name="clicked" handler="on_botton_7_clicked" object="id@gtk_entry" swapped="no"/>
+                    <signal name="clicked" handler="on_botton_7_clicked" object="id@gtk_entry_expression" swapped="no"/>
                   </object>
                   <packing>
                     <property name="left-attach">0</property>
@@ -301,7 +328,7 @@
                     <property name="hexpand">True</property>
                     <property name="vexpand">True</property>
                     <property name="border-width">1</property>
-                    <signal name="clicked" handler="on_botton_8_clicked" object="id@gtk_entry" swapped="no"/>
+                    <signal name="clicked" handler="on_botton_8_clicked" object="id@gtk_entry_expression" swapped="no"/>
                   </object>
                   <packing>
                     <property name="left-attach">1</property>
@@ -317,7 +344,7 @@
                     <property name="hexpand">True</property>
                     <property name="vexpand">True</property>
                     <property name="border-width">1</property>
-                    <signal name="clicked" handler="on_botton_9_clicked" object="id@gtk_entry" swapped="no"/>
+                    <signal name="clicked" handler="on_botton_9_clicked" object="id@gtk_entry_expression" swapped="no"/>
                   </object>
                   <packing>
                     <property name="left-attach">2</property>
@@ -333,7 +360,7 @@
                     <property name="hexpand">True</property>
                     <property name="vexpand">True</property>
                     <property name="border-width">1</property>
-                    <signal name="clicked" handler="on_botton_DIV_clicked" object="id@gtk_entry" swapped="no"/>
+                    <signal name="clicked" handler="on_botton_DIV_clicked" object="id@gtk_entry_expression" swapped="no"/>
                   </object>
                   <packing>
                     <property name="left-attach">3</property>
@@ -349,7 +376,7 @@
                     <property name="hexpand">True</property>
                     <property name="vexpand">True</property>
                     <property name="border-width">1</property>
-                    <signal name="clicked" handler="on_botton_SQRT_clicked" object="id@gtk_entry" swapped="no"/>
+                    <signal name="clicked" handler="on_botton_SQRT_clicked" object="id@gtk_entry_expression" swapped="no"/>
                   </object>
                   <packing>
                     <property name="left-attach">4</property>
@@ -365,7 +392,7 @@
                     <property name="hexpand">True</property>
                     <property name="vexpand">True</property>
                     <property name="border-width">1</property>
-                    <signal name="clicked" handler="on_botton_4_clicked" object="id@gtk_entry" swapped="no"/>
+                    <signal name="clicked" handler="on_botton_4_clicked" object="id@gtk_entry_expression" swapped="no"/>
                   </object>
                   <packing>
                     <property name="left-attach">0</property>
@@ -381,7 +408,7 @@
                     <property name="hexpand">True</property>
                     <property name="vexpand">True</property>
                     <property name="border-width">1</property>
-                    <signal name="clicked" handler="on_botton_MOD_clicked" object="id@gtk_entry" swapped="no"/>
+                    <signal name="clicked" handler="on_botton_MOD_clicked" object="id@gtk_entry_expression" swapped="no"/>
                   </object>
                   <packing>
                     <property name="left-attach">4</property>
@@ -397,7 +424,7 @@
                     <property name="hexpand">True</property>
                     <property name="vexpand">True</property>
                     <property name="border-width">1</property>
-                    <signal name="clicked" handler="on_botton_MUL_clicked" object="id@gtk_entry" swapped="no"/>
+                    <signal name="clicked" handler="on_botton_MUL_clicked" object="id@gtk_entry_expression" swapped="no"/>
                   </object>
                   <packing>
                     <property name="left-attach">3</property>
@@ -413,7 +440,7 @@
                     <property name="hexpand">True</property>
                     <property name="vexpand">True</property>
                     <property name="border-width">1</property>
-                    <signal name="clicked" handler="on_botton_5_clicked" object="id@gtk_entry" swapped="no"/>
+                    <signal name="clicked" handler="on_botton_5_clicked" object="id@gtk_entry_expression" swapped="no"/>
                   </object>
                   <packing>
                     <property name="left-attach">1</property>
@@ -429,7 +456,7 @@
                     <property name="hexpand">True</property>
                     <property name="vexpand">True</property>
                     <property name="border-width">1</property>
-                    <signal name="clicked" handler="on_botton_6_clicked" object="id@gtk_entry" swapped="no"/>
+                    <signal name="clicked" handler="on_botton_6_clicked" object="id@gtk_entry_expression" swapped="no"/>
                   </object>
                   <packing>
                     <property name="left-attach">2</property>
@@ -462,7 +489,7 @@
                     <property name="hexpand">True</property>
                     <property name="vexpand">True</property>
                     <property name="border-width">1</property>
-                    <signal name="clicked" handler="on_botton_0_clicked" object="id@gtk_entry" swapped="no"/>
+                    <signal name="clicked" handler="on_botton_0_clicked" object="id@gtk_entry_expression" swapped="no"/>
                   </object>
                   <packing>
                     <property name="left-attach">0</property>
@@ -478,7 +505,7 @@
                     <property name="hexpand">True</property>
                     <property name="vexpand">True</property>
                     <property name="border-width">1</property>
-                    <signal name="clicked" handler="on_botton_1_clicked" object="id@gtk_entry" swapped="no"/>
+                    <signal name="clicked" handler="on_botton_1_clicked" object="id@gtk_entry_expression" swapped="no"/>
                   </object>
                   <packing>
                     <property name="left-attach">0</property>
@@ -494,7 +521,7 @@
                     <property name="hexpand">True</property>
                     <property name="vexpand">True</property>
                     <property name="border-width">1</property>
-                    <signal name="clicked" handler="on_botton_DOT_clicked" object="id@gtk_entry" swapped="no"/>
+                    <signal name="clicked" handler="on_botton_DOT_clicked" object="id@gtk_entry_expression" swapped="no"/>
                   </object>
                   <packing>
                     <property name="left-attach">1</property>
@@ -510,7 +537,7 @@
                     <property name="hexpand">True</property>
                     <property name="vexpand">True</property>
                     <property name="border-width">1</property>
-                    <signal name="clicked" handler="on_button_EQ_clicked" object="id@gtk_entry" swapped="no"/>
+                    <signal name="clicked" handler="on_button_EQ_clicked" object="id@gtk_entry_expression" swapped="no"/>
                   </object>
                   <packing>
                     <property name="left-attach">2</property>
@@ -526,7 +553,7 @@
                     <property name="hexpand">True</property>
                     <property name="vexpand">True</property>
                     <property name="border-width">1</property>
-                    <signal name="clicked" handler="on_botton_ADD_clicked" object="id@gtk_entry" swapped="no"/>
+                    <signal name="clicked" handler="on_botton_ADD_clicked" object="id@gtk_entry_expression" swapped="no"/>
                   </object>
                   <packing>
                     <property name="left-attach">3</property>
@@ -542,7 +569,7 @@
                     <property name="hexpand">True</property>
                     <property name="vexpand">True</property>
                     <property name="border-width">1</property>
-                    <signal name="clicked" handler="on_botton_DEL_clicked" object="id@gtk_entry" swapped="no"/>
+                    <signal name="clicked" handler="on_botton_DEL_clicked" object="id@gtk_entry_expression" swapped="no"/>
                   </object>
                   <packing>
                     <property name="left-attach">4</property>
@@ -558,7 +585,7 @@
                     <property name="hexpand">True</property>
                     <property name="vexpand">True</property>
                     <property name="border-width">1</property>
-                    <signal name="clicked" handler="on_botton_CLS_clicked" object="id@gtk_entry" swapped="no"/>
+                    <signal name="clicked" handler="on_botton_CLS_clicked" object="id@gtk_entry_expression" swapped="no"/>
                   </object>
                   <packing>
                     <property name="left-attach">4</property>
@@ -574,7 +601,7 @@
                     <property name="hexpand">True</property>
                     <property name="vexpand">True</property>
                     <property name="border-width">1</property>
-                    <signal name="clicked" handler="on_botton_SUB_clicked" object="id@gtk_entry" swapped="no"/>
+                    <signal name="clicked" handler="on_botton_SUB_clicked" object="id@gtk_entry_expression" swapped="no"/>
                   </object>
                   <packing>
                     <property name="left-attach">3</property>
@@ -590,7 +617,7 @@
                     <property name="hexpand">True</property>
                     <property name="vexpand">True</property>
                     <property name="border-width">1</property>
-                    <signal name="clicked" handler="on_botton_3_clicked" object="id@gtk_entry" swapped="no"/>
+                    <signal name="clicked" handler="on_botton_3_clicked" object="id@gtk_entry_expression" swapped="no"/>
                   </object>
                   <packing>
                     <property name="left-attach">2</property>
@@ -606,7 +633,7 @@
                     <property name="hexpand">True</property>
                     <property name="vexpand">True</property>
                     <property name="border-width">1</property>
-                    <signal name="clicked" handler="on_botton_2_clicked" object="id@gtk_entry" swapped="no"/>
+                    <signal name="clicked" handler="on_botton_2_clicked" object="id@gtk_entry_expression" swapped="no"/>
                   </object>
                   <packing>
                     <property name="left-attach">1</property>
@@ -628,7 +655,7 @@
                 <property name="hexpand">True</property>
                 <property name="vexpand">True</property>
                 <property name="border-width">1</property>
-                <signal name="clicked" handler="on_botton_BRACKET_CLOSE_clicked" object="id@gtk_entry" swapped="no"/>
+                <signal name="clicked" handler="on_botton_BRACKET_CLOSE_clicked" object="id@gtk_entry_expression" swapped="no"/>
               </object>
               <packing>
                 <property name="left-attach">1</property>
@@ -644,7 +671,7 @@
                 <property name="hexpand">True</property>
                 <property name="vexpand">True</property>
                 <property name="border-width">1</property>
-                <signal name="clicked" handler="on_botton_BRACKET_OPEN_clicked" object="id@gtk_entry" swapped="no"/>
+                <signal name="clicked" handler="on_botton_BRACKET_OPEN_clicked" object="id@gtk_entry_expression" swapped="no"/>
               </object>
               <packing>
                 <property name="left-attach">1</property>
